Trying to add grid to Blog page

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
       </div>
     </div>
 
-    <div class="blog-container">
-      <div class="blog-wrapper">
-        <div class="blog-header"></div>
+    <div class="blog-container-main">
+      <div class="blog-wrapper-main">
+        <div class="blog-header-main"></div>
         <div class="uncategorized">
           <div class="content">
             <h6>
