--- a/blog.html
+++ b/blog.html
@@ -48,69 +48,99 @@
           </div>
         </div>
 
-        <div class="category-wrapper">
-          <h6><a href="worthathousandwords.html">UNCATEGORIZED</a></h6>
-          <h2><a href="worthathousandwords.html"></a>Worth A Thousand Words</h2>
-          <p>Boat.</p>
-          <div class="theme-admin">
-            <p>By<a href="#">Theme Admin,</a>14 years ago</p>
+        <div class="blog-main-contain">
+          <div class="category-wrapper">
+            <h6><a href="elements.html">UNCATEGORIZED</a></h6>
+            <h2><a href="elements.html"></a>Elements</h2>
+            <p>
+              The purpose of this HTML is to help determine what default
+              settings are with CSS and to make sure that all possible HTML
+              Elements are included in this HTML so as to not miss any possible
+              Elements when designing a
+              <span><a href="elements.html"> Read more…</a></span>
+            </p>
+            <div class="theme-admin">
+              <p>By<a href="#">Theme Admin,</a>14 years ago</p>
+            </div>
           </div>
-        </div>
 
-        <div class="category-wrapper">
-          <h6><a href="worthathousandwords.html">UNCATEGORIZED</a></h6>
-          <h2><a href="worthathousandwords.html"></a>Worth A Thousand Words</h2>
-          <p>Boat.</p>
-          <div class="theme-admin">
-            <p>By<a href="#">Theme Admin,</a>14 years ago</p>
+          <div class="category-wrapper">
+            <h6><a href="moretags.html">UNCATEGORIZED</a></h6>
+            <h2><a href="moretags.html"></a>More Tags</h2>
+            <p>More of these posts need tags.</p>
+            <div class="theme-admin">
+              <p>By<a href="#">Theme Admin,</a>15 years ago</p>
+            </div>
           </div>
-        </div>
 
-        <div class="category-wrapper">
-          <h6><a href="worthathousandwords.html">UNCATEGORIZED</a></h6>
-          <h2><a href="worthathousandwords.html"></a>Worth A Thousand Words</h2>
-          <p>Boat.</p>
-          <div class="theme-admin">
-            <p>By<a href="#">Theme Admin,</a>14 years ago</p>
+          <div class="category-wrapper">
+            <h6><a href="html.html">UNCATEGORIZED</a></h6>
+            <h2><a href="html.html"></a>HTML</h2>
+            <p>
+              What HTML tags would you like to see? Let’s start with an
+              unordered list: One Two Three Four And then move on to a more
+              interesting ordered list: one, two buckle my shoe three, four
+              knock at the door Five,
+              <span><a href="html.html"> Read more…</a></span>
+            </p>
+            <div class="theme-admin">
+              <p>By<a href="#">Theme Admin,</a>15 years ago</p>
+            </div>
           </div>
-        </div>
 
-        <div class="category-wrapper">
-          <h6><a href="worthathousandwords.html">UNCATEGORIZED</a></h6>
-          <h2><a href="worthathousandwords.html"></a>Worth A Thousand Words</h2>
-          <p>Boat.</p>
-          <div class="theme-admin">
-            <p>By<a href="#">Theme Admin,</a>14 years ago</p>
+          <div class="category-wrapper">
+            <h6><a href="links.html">UNCATEGORIZED</a></h6>
+            <h2><a href="links.html"></a>Links</h2>
+            <p>
+              A few well known WordPress links: WordPress.org, the Codex and the
+              download page.
+            </p>
+            <div class="theme-admin">
+              <p>By<a href="#">Theme Admin,</a>15 years ago</p>
+            </div>
           </div>
-        </div>
 
-        <div class="category-wrapper">
-          <h6><a href="worthathousandwords.html">UNCATEGORIZED</a></h6>
-          <h2><a href="worthathousandwords.html"></a>Worth A Thousand Words</h2>
-          <p>Boat.</p>
-          <div class="theme-admin">
-            <p>By<a href="#">Theme Admin,</a>14 years ago</p>
+          <div class="category-wrapper">
+            <h6><a href="categoryhier.html">UNCATEGORIZED</a></h6>
+            <h2><a href="categoryhier.html"></a>Category Hierarchy</h2>
+            <p>
+              his post has 4 categories, part of a hierarchy that is 3 deep.
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce
+              euismod commodo ante. Suspendisse potenti. Nunc pellentesque quam
+              vel pede. Ut a lorem non urna molestie euismod. Fusce
+              <span><a href="categoryhier.html"> Read more…</a></span>
+            </p>
+            <div class="theme-admin">
+              <p>By<a href="#">Theme Admin,</a>15 years ago</p>
+            </div>
           </div>
-        </div>
 
-        <div class="category-wrapper">
-          <h6><a href="worthathousandwords.html">UNCATEGORIZED</a></h6>
-          <h2><a href="worthathousandwords.html"></a>Worth A Thousand Words</h2>
-          <p>Boat.</p>
-          <div class="theme-admin">
-            <p>By<a href="#">Theme Admin,</a>14 years ago</p>
-          </div>
-        </div>
-
-        <div class="category-wrapper">
-          <h6><a href="worthathousandwords.html">UNCATEGORIZED</a></h6>
-          <h2><a href="worthathousandwords.html"></a>Worth A Thousand Words</h2>
-          <p>Boat.</p>
-          <div class="theme-admin">
-            <p>By<a href="#">Theme Admin,</a>14 years ago</p>
+          <div class="category-wrapper">
+            <h6><a href="helloworld.html">UNCATEGORIZED</a></h6>
+            <h2><a href="helloworld.html"></a>Hello world!</h2>
+            <p>
+              Welcome to WordPress. This is your first post. Edit or delete it,
+              then start blogging!
+            </p>
+            <div class="theme-admin">
+              <p>By<a href="#">Theme Admin,</a>15 years ago</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+    <footer>
+      <div class="footer-container">
+        <div class="left-footer">
+          <div class="about-footer-wrapper"></div>
+          <div class="parent-page"></div>
+        </div>
+        <div class="right-footer">
+          <div class="hest-wrapper"></div>
+          <div class="developby"></div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
