Started Contact Page

--- a/blog.html
+++ b/blog.html
@@ -38,6 +38,7 @@
     </div>
 
     <div class="main-container">
+      
       <div class="blog-main-contain">
         <div class="category-wrapper">
           <h6><a href="worthathousandwords.html">UNCATEGORIZED</a></h6>
@@ -48,7 +49,7 @@
           </div>
         </div>
 
-        <div class="blog-main-contain">
+       
           <div class="category-wrapper">
             <h6><a href="elements.html">UNCATEGORIZED</a></h6>
             <h2><a href="elements.html"></a>Elements</h2>
@@ -133,12 +134,12 @@
     <footer>
       <div class="footer-container">
         <div class="left-footer">
-          <div class="about-footer-wrapper"></div>
-          <div class="parent-page"></div>
+          <div class="about-footer-wrapper">ABOUT</div>
+          <div class="parent-page">PARENT PAGE</div>
         </div>
         <div class="right-footer">
-          <div class="hest-wrapper"></div>
-          <div class="developby"></div>
+          <div class="hest-wrapper">Hestia |</div>
+          <div class="developby">Developed by</div>
         </div>
       </div>
     </footer>
