Some work on Contact form

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <a class="hestia-name"> Hestia</a>
       </div>
       <div class="links-wrapper">
-        <div class="main-nav-links"><a href="">HOME</a></div>
+        <div class="main-nav-links"><a href="index.html">HOME</a></div>
         <div class="main-nav-links"><a href="blog.html">BLOG</a></div>
         <div class="main-nav-links"><a href="contact.html">CONTACT</a></div>
         <div class="more-button"><a href="moretags.html">MORE</a></div>
@@ -43,6 +43,45 @@
           referrerpolicy="no-referrer-when-downgrade"
         >
         </iframe>
+      </div>
+    </div>
+
+    <div class="contact-flex-container"></div>
+    <div class="contact-container">
+      <div class="contact-header">Send us a message</div>
+      <div class="contact-content-fields">
+        <div class="form-entry">
+          <input
+            type="text"
+            id="fname"
+            name="firstname"
+            placeholder="Your name.."
+            class="form"
+          />
+        </div>
+
+        <div class="form-entry">
+          <input
+            type="text"
+            id="lname"
+            name="lastname"
+            placeholder="Your last name.."
+            class="form"
+          />
+        </div>
+
+        <div class="form-entry">
+          <input
+            type="text"
+            id="write something"
+            name="write something"
+            placeholder="Write something.."
+            class="form"
+          />
+        </div>
+      </div>
+      <div class="form-info">
+        <i class="fa-solid fa-phone-volume"></i>CONTACT
       </div>
     </div>
   </body>
