--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="hestia-name"> Hestia</a>
       </div>
       <div class="links-wrapper">
-        <div class="main-nav-links"><a href="">HOME</a></div>
+        <div class="main-nav-links"><a href="index.html">HOME</a></div>
         <div class="main-nav-links"><a href="blog.html">BLOG</a></div>
         <div class="main-nav-links"><a href="contact.html">CONTACT</a></div>
         <div class="more-button"><a href="moretags.html">MORE</a></div>
