Changed naviation to scss

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hestia Home</title>
 
-    <link rel="stylesheet" href="Styles/styles.css" />
-    <link rel="stylesheet" href="Styles/blog.css" />
-    <link rel="stylesheet" href="Styles/contact.css" />
-    <link rel="stylesheet" href="Styles/moretags.css" />
+    <link rel="stylesheet" href="styles/common/navigation.css">
+    <link rel="stylesheet" href="styles/home/home.css" />
+    <link rel="stylesheet" href="styles/blog.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
+    <link rel="stylesheet" href="styles/moretags.css" />
   </head>
   <body>
-    <div class="nav-home-container">
+    <div class="nav-container">
       <div class="hestia-wrapper">
-        <a class="hestia-name"> Hestia</a>
+        <a class="hestia-name" href="#">Hestia</a>
       </div>
       <div class="links-wrapper">
         <div class="main-nav-links"><a href="index.html">HOME</a></div>
