--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hestia Home</title>
 
-    <link rel="stylesheet" href="Styles/styles.css" />
-    <link rel="stylesheet" href="Styles/blog.css" />
+    <link rel="stylesheet" href="Styles/home.css" />
+    <link rel="stylesheet" href="Blog_Page/blog.css" />
     <link rel="stylesheet" href="Styles/contact.css" />
     <link rel="stylesheet" href="Styles/moretags.css" />
 
