Added some scss to home

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hestia Home</title>
 
-    <link rel="stylesheet" href="Styles/home.css" />
-    <link rel="stylesheet" href="Blog_Page/blog.css" />
-    <link rel="stylesheet" href="Styles/contact.css" />
-    <link rel="stylesheet" href="Styles/moretags.css" />
+    <link rel="stylesheet" href="/styles/home.css" />
+    <link rel="stylesheet" href="/styles/blog.css" />
+    <link rel="stylesheet" href="/styles/contact.css" />
+    <link rel="stylesheet" href="/styles/moretags.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,10 +24,10 @@
         <a class="hestia-name"> Hestia</a>
       </div>
       <div class="links-wrapper">
-        <div class="main-nav-links"><a href="index.html">HOME</a></div>
-        <div class="main-nav-links"><a href="blog.html">BLOG</a></div>
-        <div class="main-nav-links"><a href="contact.html">CONTACT</a></div>
-        <div class="more-button"><a href="moretags.html">MORE</a></div>
+        <div class="main-nav-links"><a href="/index.html">HOME</a></div>
+        <div class="main-nav-links"><a href="/pages/blog.html">BLOG</a></div>
+        <div class="main-nav-links"><a href="/pages/contact.html">CONTACT</a></div>
+        <div class="more-button"><a href="/pages/index.html">MORE</a></div>
       </div>
     </div>
 
