--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,9 +7,10 @@
     <title>Hestia Home</title>
 
     <!-- <link rel="stylesheet" href="Styles/styles.css" /> -->
-    <link rel="stylesheet" href="Styles/blog.css" />
-    <link rel="stylesheet" href="Contact_page/contact.css" />
-    <link rel="stylesheet" href="Styles/moretags.css" />
+    <link rel="stylesheet" href="styles/navigation.css" />
+    <link rel="stylesheet" href="styles/blog.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
+    <link rel="stylesheet" href="styles/moretags.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,10 +25,10 @@
         <a class="hestia-name"> Hestia</a>
       </div>
       <div class="links-wrapper">
-        <div class="main-nav-links"><a href="index.html">HOME</a></div>
-        <div class="main-nav-links"><a href="blog.html">BLOG</a></div>
-        <div class="main-nav-links"><a href="contact.html">CONTACT</a></div>
-        <div class="more-button"><a href="moretags.html">MORE</a></div>
+        <div class="main-nav-links"><a href="/index.html">HOME</a></div>
+        <div class="main-nav-links"><a href="/blog.html">BLOG</a></div>
+        <div class="main-nav-links"><a href="/contact.html">CONTACT</a></div>
+        <div class="more-button"><a href="/moretags.html">MORE</a></div>
       </div>
     </div>
 
