Cleaned up some folders

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
     <title>Hestia Home</title>
 
     <!-- <link rel="stylesheet" href="Styles/styles.css" /> -->
-    <link rel="stylesheet" href="styles/navigation.css" />
+    <link rel="stylesheet" href="/styles/common/navigation.css" />
     <link rel="stylesheet" href="styles/blog.css" />
     <link rel="stylesheet" href="styles/contact.css" />
     <link rel="stylesheet" href="styles/moretags.css" />
@@ -26,9 +26,9 @@
       </div>
       <div class="links-wrapper">
         <div class="main-nav-links"><a href="/index.html">HOME</a></div>
-        <div class="main-nav-links"><a href="/blog.html">BLOG</a></div>
-        <div class="main-nav-links"><a href="/contact.html">CONTACT</a></div>
-        <div class="more-button"><a href="/moretags.html">MORE</a></div>
+        <div class="main-nav-links"><a href="/pages/blog.html">BLOG</a></div>
+        <div class="main-nav-links"><a href="/pages/contact.html">CONTACT</a></div>
+        <div class="more-button"><a href="/pages/moretags.html">MORE</a></div>
       </div>
     </div>
 
