Worked on Home page, started About page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,9 +8,9 @@
 
     <!-- <link rel="stylesheet" href="Styles/styles.css" /> -->
     <link rel="stylesheet" href="/styles/common/navigation.css" />
-    <link rel="stylesheet" href="styles/blog.css" />
-    <link rel="stylesheet" href="styles/contact.css" />
-    <link rel="stylesheet" href="styles/moretags.css" />
+    <link rel="stylesheet" href="/styles/contact.css" />
+    <link rel="stylesheet" href="/styles/footer.css" />
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
