--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hestia Home</title>
+    <title>Blog Page</title>
 
-    <link rel="stylesheet" href="/styles/home.css" />
+    <link rel="stylesheet" href="/styles/common/navigation.css" />
     <link rel="stylesheet" href="/styles/blog.css" />
-    <link rel="stylesheet" href="/styles/contact.css" />
-    <link rel="stylesheet" href="/styles/moretags.css" />
-
+    <link rel="stylesheet" href="/styles/common/footer.css" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -133,13 +132,17 @@
 
     <footer>
       <div class="footer-container">
-        <div class="left-footer">
-          <div class="about-footer-wrapper">ABOUT</div>
-          <div class="parent-page">PARENT PAGE</div>
+        <div class="footer-wrapper">
+          <div class="left-footer">
+            <a href="/pages/about.html"> ABOUT</a>
+            <a href="#"> PARENT PAGE</a>
+          </div>
         </div>
-        <div class="right-footer">
-          <div class="hest-wrapper">Hestia |</div>
-          <div class="developby">Developed by</div>
+
+        <div class="footer-wrapper">
+          <div class="right-footer">
+            <p>Hestia | Developed by Themelse</p>
+          </div>
         </div>
       </div>
     </footer>
